--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^3.4.1",
     "gatsby-plugin-react-helmet": "^4.5.0",
+    "gatsby-plugin-sharp": "*",
     "gatsby-plugin-styled-components": "^4.5.0",
     "gatsby-source-wordpress": "^5.5.1",
+    "gatsby-transformer-sharp": "*",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
